Ready for using

--- a/SergRasKoin/Views/Home/Index.cshtml
+++ b/SergRasKoin/Views/Home/Index.cshtml
@@ -37,9 +37,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Добро пожаловать на страницу продажи криптовалюты SergRasKoin!</h1>
-        <p>Здесь вы можете ознакомиться с информацией о продаже криптовалюты SergRasKoin.</p>
-        <p>Регистрация: <a href="@Url.Action("User", "Registration")">Стать обладателем SergRasKoin</a>.</p> 
+        <h1>Добро пожаловать на страницу продажи криптовалюты SergRasKoin!</h1> 
+        <h2>Текущий курс: 1 SergRasKoin = 569.49 Fantiks</h2>
+        <p>SergRasKoin - перспективная криптовалюта, которая со старта продаж пользуется популярностью в широких кругах. Становись частью большого сообщества - покупай SergRasKoin.</p>
+        <p>Регистрация: <a href="@Url.Action("User", "Registration")">Стать обладателем SergRasKoin</a>.</p>
+        <p>Вход в свой аккаунт: <a href="@Url.Action("Log", "Login")">Войти в аккаунт</a>.</p>
        @* <p>Регистрация: <a href="@Url.Action("Sales", "Manage")">Стать обладателем SergRasKoin</a>.</p>  *@
     </div>
 </body>
