--- a/SergRasKoin/Views/Home/Index.cshtml
+++ b/SergRasKoin/Views/Home/Index.cshtml
@@ -5,44 +5,74 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>
-        Добро пожаловать!
-    </title>
+    <title>Добро пожаловать!</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #f8f9fa;
+            color: #333;
         }
 
         .container {
             width: 80%;
             margin: auto;
             padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         h1 {
+            color: #000;
+            margin-bottom: 20px;
+        }
+
+        h2 {
             color: #333;
+            margin-top: 20px;
         }
 
         p {
             color: #666;
+            margin-bottom: 20px;
         }
 
-        a {
-            color: #007bff;
-            text-decoration: none;
+        .button-container {
+            margin-top: 20px;
         }
+
+            .button-container a {
+                display: inline-block;
+                margin-right: 10px;
+                margin-bottom: 10px;
+                padding: 10px 20px;
+                background-color: #343a40;
+                color: #fff;
+                text-decoration: none;
+                border-radius: 5px;
+                transition: background-color 0.3s ease;
+            }
+
+                .button-container a:last-child {
+                    margin-right: 0;
+                }
+
+                .button-container a:hover {
+                    background-color: #23272b;
+                }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Добро пожаловать на страницу продажи криптовалюты SergRasKoin!</h1> 
+        <h1>Добро пожаловать на страницу продажи криптовалюты SergRasKoin!</h1>
         <h2>Текущий курс: 1 SergRasKoin = 569.49 Fantiks</h2>
         <p>SergRasKoin - перспективная криптовалюта, которая со старта продаж пользуется популярностью в широких кругах. Становись частью большого сообщества - покупай SergRasKoin.</p>
-        <p>Регистрация: <a href="@Url.Action("User", "Registration")">Стать обладателем SergRasKoin</a>.</p>
-        <p>Вход в свой аккаунт: <a href="@Url.Action("Log", "Login")">Войти в аккаунт</a>.</p>
-       @* <p>Регистрация: <a href="@Url.Action("Sales", "Manage")">Стать обладателем SergRasKoin</a>.</p>  *@
+        <div class="button-container">
+            <a href="@Url.Action("User", "Registration")">Регистрация</a>
+            <a href="@Url.Action("Log", "Login")">Войти в аккаунт</a>
+        </div>
     </div>
 </body>
 </html>
