--- a/SergRasKoin/Views/Manage/SaleUserCoinsView.cshtml
+++ b/SergRasKoin/Views/Manage/SaleUserCoinsView.cshtml
@@ -1,12 +1,12 @@
 ﻿@using SergRasKoin.Controllers
 @using SergRasKoin.Features.DtoModels.Sales
-@model SalesDto
+@model EditSales
 
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Баланс пользователя:</title>
+    <title>Продать SergRaskoin</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,7 +21,7 @@
             margin-bottom: 20px;
         }
 
-        .sum-container {
+        .form-container {
             background-color: #fff;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -30,27 +30,26 @@
             max-width: 400px;
         }
 
-        .sum {
-            font-size: 24px;
-            color: #333;
+        .form-group {
             margin-bottom: 20px;
         }
 
-        .error {
-            color: #c00;
-            margin-bottom: 20px;
+        .form-control {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
 
         .btn-primary {
-            display: inline-block;
-            padding: 10px 20px;
             background-color: #343a40;
             color: #fff;
             border: none;
+            padding: 10px 20px;
+            font-size: 16px;
             border-radius: 5px;
-            text-decoration: none;
-            transition: background-color 0.3s ease;
-            margin-right: 10px;
+            cursor: pointer;
         }
 
             .btn-primary:hover {
@@ -72,9 +71,19 @@
     </style>
 </head>
 <body>
-    <div class="sum-container">
-        <h2>Баланс пользователя:</h2>
-        <p class="sum">@Model.SumOfCoint</p>
+    <div class="form-container">
+        <h2>Продать SergRaskoin</h2>
+        @using (Html.BeginForm(nameof(ManageController.SaleUserCoinsAsync), ManageController.Manage, FormMethod.Post))
+        {
+            @Html.HiddenFor(x => x.UserId)
+            @Html.ValidationSummary()
+            <div class="form-group">
+                @Html.LabelFor(x => x.Count_Of_Coins, "Введите количество коинов, которое хотите продать:")
+                @Html.TextBoxFor(x => x.Count_Of_Coins, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.Count_Of_Coins)
+            </div>
+            <button type="submit" class="btn btn-primary">Продать</button>
+        }
     </div>
     <footer>
         <a href="@Url.Action(nameof(HomeController.Index), "Home")" class="btn btn-primary">На главную</a>
