--- a/SergRasKoin/Views/Manage/SaleUserCoinsView.cshtml
+++ b/SergRasKoin/Views/Manage/SaleUserCoinsView.cshtml
@@ -86,7 +86,7 @@
         }
     </div>
     <footer>
-        <a href="@Url.Action(nameof(HomeController.Index), "Home")" class="btn btn-primary">На главную</a>
+        <a href="@Url.Action(nameof(HomeController.Index), "Home")" class="btn btn-primary">Выйти из аккаунта</a>
     </footer>
 </body>
 </html>
