--- a/SergRasKoin/Views/Manage/GetSumSales.cshtml
+++ b/SergRasKoin/Views/Manage/GetSumSales.cshtml
@@ -77,7 +77,7 @@
         <p class="sum">@Model.SumOfCoint</p>
     </div>
     <footer>
-        <a href="@Url.Action(nameof(HomeController.Index), "Home")" class="btn btn-primary">На главную</a>
+        <a href="@Url.Action(nameof(HomeController.Index), "Home")" class="btn btn-primary">Выйти из аккаунта</a>
     </footer>
 </body>
 </html>
