--- a/SergRasKoin/Views/Registration/User.cshtml
+++ b/SergRasKoin/Views/Registration/User.cshtml
@@ -103,7 +103,7 @@
         }
     </div>
     <footer>
-        <a href="@Url.Action(nameof(HomeController.Index), "Home")" class="btn btn-primary">На главную</a>
+        <a href="@Url.Action(nameof(HomeController.Index), "Home")" class="btn btn-primary">Выйти из аккаунта</a>
     </footer>
 </body>
 </html>
