--- a/SergRasKoin/Views/UserMenu/UserMenu.cshtml
+++ b/SergRasKoin/Views/UserMenu/UserMenu.cshtml
@@ -79,7 +79,7 @@
         }
     </div>
     <footer>
-        <a href="@Url.Action(nameof(HomeController.Index), "Home")" class="btn btn-primary">На главную</a>
+        <a href="@Url.Action(nameof(HomeController.Index), "Home")" class="btn btn-primary">Выйти из аккаунта</a>
     </footer>
 </body>
 </html>
